@@ -113,3 +113,29 @@ plot 5*sin(x)/x, file(N), file(M)
 pause -1 "Hit return to continue"
 #
 reset
+fmt = '%Y-%m-%d %H:%M:%S'
+time_str = '2005-05-09 19:44:12'
+seconds = strptime(fmt, time_str)
+time_str2 = strftime(fmt, seconds+10.)
+print ''
+print 'time_str          = "', time_str, '"'
+print '-> seconds        = ', seconds
+print '   seconds + 10.  = ', seconds+10.
+print '-> time_str2      = "', time_str2, '"'
+#
+print ""
+#
+set xdata time
+set key inside left
+#set format x '%Y-%m-%d'
+fmt = "%d/%m/%y\t%H%M"
+print "read_time(fmt, c) =" \
+      . " strptime(fmt, stringcolumn(c).' '.stringcolumn(c+1))"
+read_time(fmt, c) = strptime(fmt, stringcolumn(c).' '.stringcolumn(c+1))
+plot 'timedat.dat' using (read_time(fmt,1)):3 with histeps, \
+     'timedat.dat' using (read_time(fmt,1)):($3-0.01):2 with labels title ''
+#
+print ""
+pause -1 "Hit return to continue"
+#
+reset
